--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -451,8 +451,9 @@ body
                     line-height: 1.3
                 .label
                     position: absolute
-                    top: 0
-                    right: 0
+                    right: 10px
+                    font-size: em(14px)
+                    text-decoration: none
                 &:hover .title
                     bottom: -100%
                     color: $accent-color
@@ -534,9 +535,10 @@ body
                 margin: 0 0 15px
             .item-info
                 margin: 0
+            .tags, .item-info, .breadcrumbs
                 padding: 0 0 0 70px
-            .tags
-                padding: 0 0 0 70px
+            .breadcrumbs
+                padding-right: 100px
             .item-content
                 display: table
                 width: 100%
@@ -545,7 +547,7 @@ body
                     vertical-align: top
                 .user-avatar
                     width: 70px
-                    padding: 30px 0 0
+                    padding: 5px 0 0
                 .item-title
                     > *
                         float: left
@@ -553,7 +555,7 @@ body
                         margin: 0 0 5px
                 .answers-count
                     width: 100px
-                    padding: 30px 0 0 20px
+                    padding: 5px 0 0 20px
                     text-align: center
                     a
                         text-decoration: none
