Сортировка (выпадающий список, направление сортировки).

--- a/app/header.sass
+++ b/app/header.sass
@@ -80,6 +80,9 @@
             width: 314px
             background-color: $light-color
             padding: 10px 0
+            a i, a .fa, i, .fa
+                float: none
+                color: $dark-color
             i, .fa
                 line-height: 1
             .container-header
