Адаптивность карты сайта, области "Всего страниц".

--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -278,6 +278,21 @@
             margin: 20px 0 0 40px
             width: calc(100% - 40px)
 
+    // Tree
+    ul.tree
+        margin: 0
+        padding: 10px 15px
+        li
+            a
+                &:before
+                    top: calc(50% - 2px)
+                    left: -15px
+                    width: 10px
+                    height: 3px
+            ul
+                margin: 0
+                padding: 10px 15px
+
     /* Footer */
     footer
         //.copyright
