Адаптивность статистики пользователя в профиле (для lg и md).

--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -12,6 +12,14 @@
             font-size: em(32px)
             /* */
 
+@media (max-width : 1300px)
+
+    /* USER PROFILE */
+    .user-statistics
+        .item
+            margin-left: 15px
+            /* */
+
 /* Large Devices, Wide Screens - MD - для 1199 и менее */
 @media only screen and (max-width : 1199px)
     .align-center-md
