--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -461,7 +461,7 @@ section
 label
     font-family: $title-font
     float: left
-input, textarea
+input, textarea, .select-dropdown
     display: inline-block
     line-height: 36px
     background: #e9e9e9 // #e1e1e1
@@ -470,6 +470,7 @@ input, textarea
     padding: 0 10px
     font-family: $title-font
     width: 100%
+    max-width: 100%
     &:hover, &:focus
         background: #ececec
 input
@@ -502,6 +503,10 @@ input
         display: table-cell
         width: 100%
         border-radius: 2px 0 0 2px
+    &.two-fields
+        .input
+            float: left
+            width: 50%
     .input-group-button, .fixed
         display: table-cell
         width: 1%
