Страница поиска (расширенный поиск).

--- a/app/header.sass
+++ b/app/header.sass
@@ -320,14 +320,12 @@ body.is-windows-phone
 
 // Search
 .search-form
-    .input-group
-        margin-bottom: 10px
     input
-        height: 40px
         font-size: em(18px)
-    button
-        height: 40px
-        i, .fa
+.search-section
+    .search-form
+        .input-group
+            margin-bottom: 10px
 
 // mobile menu
 #menu
