--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -103,6 +103,18 @@ a
         color: $accent-color
 i:only-child, .fa:only-child
     margin: 0
+.icon
+    line-height: 16px
+    &.icon-dash
+        span
+            display: inline-block
+            position: relative
+            top: -5px
+            width: 12px
+            height: 3px
+            background: $gray-color
+            border-bottom: 1px solid #ffffff
+
 
 // Links
 a, button
@@ -461,7 +473,7 @@ section
 label
     font-family: $title-font
     float: left
-input, textarea, .select-dropdown
+input, textarea, .input
     display: inline-block
     line-height: 36px
     background: #e9e9e9 // #e1e1e1
@@ -473,7 +485,12 @@ input, textarea, .select-dropdown
     max-width: 100%
     &:hover, &:focus
         background: #ececec
-input
+form .dropdown.select-dropdown
+    .dropdown-button
+        display: inline-block
+        width: 100%
+        border-bottom: none
+input, .input
     height: 38px
 
 .white-form
@@ -556,6 +573,14 @@ input
         .dropdown-container
             display: inline-block
             width: 100%
+    &.select-dropdown
+        .dropdown-container
+            top: 38px
+        &.active
+            .dropdown-arrow
+                &:after
+                    top: 31px
+                    left: 14px
     .dropdown-button
         color: $accent-color
         text-decoration: none
@@ -616,11 +641,15 @@ input
         position: relative
         margin: 5px 0
         cursor: pointer
-        i, .fa
+        i, .fa, .icon
             float: left
             width: 25px
             margin: 1px 0 0 0
-        &:hover
+        &:hover, &.selected
             color: $accent-color
-            i, .fa
+            > i, > .fa
                 color: $accent-color
+            ul
+                color: $dark-color
+        ul
+            padding: 5px 0 5px 20px
