--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -882,6 +882,83 @@ footer
 // End Footer
 
 /* USER PROFILE */
+.user-profile
+    .white-section
+        display: inline-block
+        width: 100%
+    #user-menu-section
+        display: inline-block
+        float: left
+        width: 100px
+        height: 100%
+        background: $dark-color
+        border-right: 1px solid #eeeeee
+        .user-menu
+            text-align: center
+            li
+                display: inline-block
+                width: 100%
+                border-top: 1px solid #3d4c5c
+                border-bottom: 1px solid #1f3245
+                &:first-child
+                    border-top: none
+                &:last-child
+                    border-bottom: none
+                a
+                    display: inline-block
+                    width: calc(100% - 10px)
+                    margin: 5px
+                    padding: 10px 0
+                    text-decoration: none
+                    > *
+                        color: #ffffff
+                    i, .fa
+                        width: 100%
+                        text-align: center
+                        margin: 0
+                        font-size: 24px
+                    span
+                        text-decoration: none
+                        font-size: em(14px)
+                &.active, &:hover
+                    a
+                        background-color: #eeeeee
+                        > *
+                            color: $dark-color
+                    &.notification:after
+                        border-color: #e7e7e7
+                &.notification:after
+                    right: 20px
+                    top: 7px
+                    border-color: $dark-color
+    #user-section
+        display: inline-block
+        float: left
+        width: calc(100% - 100px)
+        .user-avatar
+            width: 200px
+            height: 200px
+            float: left
+            .avatar
+                width: 100%
+                border-radius: 0
+        .user-profile-picture
+            display: inline-block
+            float: left
+            width: calc(100% - 200px)
+            height: 200px
+        .user-statistics
+            display: inline-block
+            float: left
+            width: 100%
+            background: #ffffff
+            border-top: 1px solid #eeeeee
+            border-bottom: 1px solid #eeeeee
+    #content
+        display: inline-block
+        float: left
+        width: calc(100% - 100px)
+
 .user-sidebar
     background: $light-color
     margin-top: 50px //
@@ -894,19 +971,7 @@ footer
         > div
             display: inline-block
             width: 100%
-        .user-avatar
-            display: inline-block
-            width: 100%
-            position: relative
-            margin-top: -50px //
-            text-align: center
-            .avatar
-                float: none
-                width: auto
-                max-width: 140px
-                border-radius: 5px
-                border: 3px solid #ffffff
-                box-shadow: 0 -5px 7px rgba(0, 0, 0, 0.1)
+
         .login
             font-size: em(24px)
             font-family: $title-font
@@ -948,27 +1013,9 @@ footer
         display: inline-block
         width: 100%
         margin: 5px 0
-    .user-menu
-        text-align: left
-        margin: 15px 0 0 -15px
-        li
-            margin-bottom: 10px
-            a
-                text-decoration: none
-                i, .fa
-                    width: 20px
-                    text-align: center
-                span
-                    text-decoration: none
-                    color: $dark-gray-color
-            &.active a, &:hover a
-                color: $dark-color
-                > *
-                     color: inherit
 
 .user-statistics
-    height: 40px
-    margin-bottom: 10px
+    height: 48px
     color: #565a5f
     a.item:hover, a.item.active
         > *
@@ -977,11 +1024,10 @@ footer
         float: left
         display: inline-block
         margin-left: 25px
-        height: 40px
         > *
             color: #565a5f
             font-size: em(14px)
-            line-height: 40px
+            line-height: 48px
             float: left
         i, .fa
             font-size: 16px
