--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -500,6 +500,7 @@ body
     .item
         position: relative
         display: inline-block
+        width: 100%
         float: left
         border-top: 1px solid #ffffff
         border-bottom: 1px solid #eeeeee
