--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -915,7 +915,7 @@ footer
                     display: inline-block
                     width: calc(100% - 10px)
                     margin: 5px
-                    padding: 10px 0
+                    padding: 5px 0 // 10px 0
                     text-decoration: none
                     > *
                         color: #ffffff
@@ -923,7 +923,7 @@ footer
                         width: 100%
                         text-align: center
                         margin: 0
-                        font-size: 24px
+                        font-size: 20px // 24px
                     span
                         text-decoration: none
                         font-size: em(14px)
@@ -1019,6 +1019,10 @@ footer
     #content
         padding-top: 10px
         margin-bottom: 0
+    .blog
+        .notification
+            &:after
+                content: none
 
 .user-statistics
     display: inline-block
