Все пользователи сайта.

--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -664,6 +664,10 @@ input, .input
         position: relative
         margin: 5px 0
         cursor: pointer
+        span
+            float: left
+            white-space: nowrap
+            width: calc(100% - 25px)
         i, .fa, .icon
             float: left
             width: 25px
