--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -276,8 +276,11 @@ body
             vertical-align: middle
         .rating-position
             width: 30px
+            min-width: 30px
+            color: $dark-gray-color
         .user-avatar
             width: 70px
+            min-width: 70px
             padding-right: 20px
         .user
             .login, .rank, .date
@@ -342,6 +345,14 @@ body
             .statistic
                 position: relative
                 text-align: center
+                &:not(.rating)
+                    width: 9%
+                    min-width: 9%
+                    max-width: 9%
+                &.comments
+                    width: 13%
+                    min-width: 13%
+                    max-width: 13%
                 > *
                     float: none
                 .title, .count
@@ -358,6 +369,8 @@ body
                 &.rating
                     padding-left: 50px
                     width: 150px
+                    > *
+                        text-align: left
 
 // like-dislike widget
 .like-dislike-widget
