Все пользователи сайта (адаптивность). Адаптивность сортировки.

--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -508,6 +508,9 @@ input, textarea, .input
     max-width: 100%
     &:hover, &:focus
         background: #ececec
+input[type="checkbox"]
+    line-height: 1
+    height: 20px
 form .dropdown.select-dropdown
     .dropdown-button
         display: inline-block
@@ -555,7 +558,7 @@ input, .input
             white-space: nowrap
             border-radius: 0 2px 2px 0
         .checkbox
-            top: 3px
+            top: 2px
             margin: 0
     .fixed:first-child
         padding-right: 10px
