--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -239,6 +239,9 @@
                     float: left
                 .user
                     width: calc(100% - 20px - 90px)
+                .user-avatar.big + .user
+                    width: calc(100% - 120px)
+                    height: 100px
                 .statistic:not(.rating)
                     margin-top: 10px
                     margin-right: 20px
@@ -256,6 +259,8 @@
                     position: absolute
                     top: 17px
                     right: 0
+                .buttons
+                    width: 100%
 
     /* Content */
     #content
