--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -330,9 +330,18 @@ body
             padding: 15px 0
             &:first-child
                 padding-top: 15px
+            .user-avatar
+                &.big
+                    width: 120px
+                    min-width: 120px
             &.online
                 .user-avatar
                     position: relative
+                    &.big
+                        &:after
+                            width: 12px
+                            height: 12px
+                            right: 22px
                     &:after
                         content: ""
                         width: 8px
@@ -373,6 +382,12 @@ body
                     width: 150px
                     > *
                         text-align: left
+            .buttons
+                width: 50%
+                text-align: right
+                .button
+                    float: none
+                    margin: 0 0 10px 20px
 
 // like-dislike widget
 .like-dislike-widget
