--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -378,6 +378,8 @@ svg
     margin-right: 20px
 .m-r-25
     margin-right: 25px
+.p-t-0
+    padding-top: 0 !important
 .p-r-25
     padding-right: 25px
 
