--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -128,7 +128,7 @@ a, button
         span, i, .fa
             color: $accent-color
             text-decoration: none
-a.link
+a.link, button.link
     font-family: $title-font
     text-decoration: none
     span
