--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -45,6 +45,7 @@
             li
                 font-size: 14px
     #header
+        margin-bottom: 20px
         h1
             margin-top: 23px
             font-size: em(26px)
@@ -68,17 +69,19 @@
     .menu-section
         .main-menu
             li
-                //a
-                //    font-size: em(16px)
+                padding: 8px 12px
+                a
+                    font-size: em(16px)
                 ul
                     top: 53px
         .search-form
+            margin: 8px 0 0
             input
-                width: 55px
-                //font-size: em(16px)
+                width: 50px
+                font-size: em(16px)
             button
                 i, .fa
-                    font-size: 26px
+                    font-size: 24px
 
 
     /* Content */
