--- a/app/header.sass
+++ b/app/header.sass
@@ -224,12 +224,13 @@ body.is-windows-phone
     position: relative
     display: inline-block
     width: 100%
-    background: linear-gradient(to top, $light-gradient-colors)
+    background: #F5F5F5
+    //background: linear-gradient(to top, $light-gradient-colors)
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1)
-    border: 1px solid #f9f9f9
-    border-bottom: none
-    border-radius: 3px
-    line-height: 30px
+    //border: 1px solid #f9f9f9
+    //border-bottom: none
+    border-radius: 5px //3px
+    line-height: 32px // 30px
     padding: 0 5px
 
     // menu
@@ -238,7 +239,7 @@ body.is-windows-phone
         li
             float: left
             padding: 11px 15px
-            border-bottom: 1px solid #f9f9f9
+            //border-bottom: 1px solid #f9f9f9
             border-right: 1px solid #fff
             border-left: 1px solid #eee
             &:first-child
@@ -261,8 +262,8 @@ body.is-windows-phone
                 display: none
                 position: absolute
                 z-index: 999
-                top: 54px
-                margin-left: -15px
+                top: 55px
+                margin-left: -17px
                 background: linear-gradient(to bottom, $light-gradient-colors)
                 border-radius: 0 0 2px 2px
                 border: 1px solid #f9f9f9
@@ -282,8 +283,13 @@ body.is-windows-phone
                 ul
                     display: block
         li.active
-            a
+            //border-bottom: 3px solid $accent-color
+            //padding-bottom: 8px
+            //background-color: #ececec
+            > a
                 color: $accent-color
+                i, .fa
+                    color: $accent-color
 
     .search-form
         width: 280px
