--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -96,6 +96,9 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a,
     &.pull-right
         margin-right: 0
         margin-left: 7px
+*
+    span + .fa
+        margin: 0 0 0 7px
 a
     &:focus
         text-decoration: none
