--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -233,6 +233,10 @@
                 &:hover
                     .text
                         background: rgba(255, 255, 255, 0.85)
+    .horisontal
+        &.four-item
+            .item
+                width: 50%
     .blog
         .users-list
             .item
@@ -479,6 +483,10 @@
                 padding: 0 8px
 
     /* Content */
+    .horisontal
+        &.four-item
+            .item
+                width: 100%
     .blog
         .item
             .item-image
