--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -267,7 +267,7 @@ body
                 a
                     background: #f4f4f4
                     margin-bottom: 20px
-.sidebar .widget.widget-users, .blog .users-list
+.sidebar .widget.widget-users, .blog .users-list, .users-list
     .item
         display: table
         width: 100%
@@ -283,7 +283,7 @@ body
             min-width: 70px
             padding-right: 20px
         .user
-            .login, .rank, .date
+            .login, .rank, .date, .text-1, .text-2
                 display: inline-block
                 width: 100%
                 float: left
@@ -292,10 +292,10 @@ body
                 text-decoration: none
                 span
                     text-decoration: none
-            .rank
+            .rank, .text-1
                 font-size: em(14px)
                 color: $dark-gray-color
-            .date
+            .date, .text-2
                 font-size: em(12px)
                 color: $gray-color
                 white-space: nowrap
@@ -322,70 +322,76 @@ body
                 color: $green-color
             .rating-down
                 color: $red-color
-.blog
-    .users-list
+.blog .users-list,
+.users-list
+    .item.user
+        padding: 15px 10px 15px 0
+        &:first-child
+            padding-top: 15px
+        .user-avatar
+            &.big
+                width: 120px
+                min-width: 120px
+                max-width: 120px
+        &.online
+            .user-avatar
+                position: relative
+                &.big
+                    &:after
+                        width: 12px
+                        height: 12px
+                        right: 22px
+                &:after
+                    content: ""
+                    width: 8px
+                    height: 8px
+                    border-radius: 50%
+                    background: $green-color
+                    position: absolute
+                    right: 18px
+                    top: 7px
+                    border: 3px solid $light-color
+                    box-sizing: content-box
+        .statistic
+            position: relative
+            text-align: center
+            &:not(.rating)
+                width: 9%
+                min-width: 9%
+                max-width: 9%
+            &.comments
+                width: 13%
+                min-width: 13%
+                max-width: 13%
+            > *
+                float: none
+            .title, .count
+                display: inline-block
+                width: 100%
+                float: left
+                text-align: center
+            .count
+                line-height: 1
+            &:not(.rating)
+                .count
+                    color: $dark-gray-color
+                    font-size: em(12px)
+            &.rating
+                padding-left: 50px
+                width: 150px
+                > *
+                    text-align: left
+        .buttons
+            width: 50%
+            text-align: right
+            .button
+                float: none
+                margin: 0 0 10px 20px
+    &.horisontal
         .item.user
-            padding: 15px 0
-            &:first-child
-                padding-top: 15px
             .user-avatar
                 &.big
-                    width: 120px
-                    min-width: 120px
-            &.online
-                .user-avatar
-                    position: relative
-                    &.big
-                        &:after
-                            width: 12px
-                            height: 12px
-                            right: 22px
-                    &:after
-                        content: ""
-                        width: 8px
-                        height: 8px
-                        border-radius: 50%
-                        background: $green-color
-                        position: absolute
-                        right: 18px
-                        top: 7px
-                        border: 3px solid $light-color
-                        box-sizing: content-box
-            .statistic
-                position: relative
-                text-align: center
-                &:not(.rating)
-                    width: 9%
-                    min-width: 9%
-                    max-width: 9%
-                &.comments
-                    width: 13%
-                    min-width: 13%
-                    max-width: 13%
-                > *
-                    float: none
-                .title, .count
-                    display: inline-block
-                    width: 100%
-                    float: left
-                    text-align: center
-                .count
-                    line-height: 1
-                &:not(.rating)
-                    .count
-                        color: $dark-gray-color
-                        font-size: em(12px)
-                &.rating
-                    padding-left: 50px
-                    width: 150px
-                    > *
-                        text-align: left
-            .buttons
-                width: 50%
-                text-align: right
-                .button
-                    float: none
-                    margin: 0 0 10px 20px
+                    width: 50%
 
 // like-dislike widget
 .like-dislike-widget
