--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -998,23 +998,23 @@ footer
 
 /* USER PROFILE */
 .user-profile
-    .white-section
-        display: table
     #user-content-section
         display: table-cell
+        padding-left: 20px
     #user-menu-section
         display: table-cell
         vertical-align: top
         width: 100px
         height: 100%
-        background: $dark-color
+        background: #f5f5f5
+        border-radius: 5px
         .user-menu
             text-align: center
             li
                 display: inline-block
                 width: 100%
-                border-top: 1px solid #3d4c5c
-                border-bottom: 1px solid #1f3245
+                border-top: 1px solid #fff
+                border-bottom: 1px solid #eee
                 &:first-child
                     border-top: none
                 &:last-child
@@ -1026,7 +1026,7 @@ footer
                     padding: 5px 0 // 10px 0
                     text-decoration: none
                     > *
-                        color: #ffffff
+                        color: $dark-color
                     i, .fa
                         width: 100%
                         text-align: center
@@ -1037,9 +1037,8 @@ footer
                         font-size: em(14px)
                 &.active, &:hover
                     a
-                        background-color: #eeeeee
                         > *
-                            color: $dark-color
+                            color: $accent-color
                     &.notification:after
                         border-color: #e7e7e7
                 &.notification:after
@@ -1051,23 +1050,27 @@ footer
         display: inline-block
         float: left
         width: 100%
+        background: $light-color
+        border-radius: 3px 3px 0 0
         .user-avatar
             width: 200px
             height: 200px
             float: left
+            padding: 5px
             .avatar
                 width: 100%
-                border-radius: 0
+                border-radius: 3px
         .user-profile-picture
             display: inline-block
             float: left
             width: calc(100% - 200px)
             height: 200px
+            border-top-right-radius: 3px
             .gradient
                 display: inline-block
                 width: 100%
                 height: 100%
-                background: linear-gradient(to right, #ffffff 0%, rgba(255, 255, 255, 0) 50%, rgba(255, 255, 255, 0) 100%)
+                background: linear-gradient(to right, $light-color 0%, rgba(255, 255, 255, 0) 50%, rgba(255, 255, 255, 0) 100%)
         .user-avatar,
         .user-profile-picture
             position: relative
@@ -1123,10 +1126,11 @@ footer
                     color: $green-color
         .user-avatar
             .buttons
-                padding-right: 10px
+                padding: 0 20px 10px 0
     #content
         padding-top: 10px
         margin-bottom: 0
+        border-radius: 0 0 3px 3px
 
 .user-statistics
     display: inline-block
