--- a/app/header.sass
+++ b/app/header.sass
@@ -206,9 +206,10 @@ body.is-windows-phone
             opacity: 0.8
 
     .contact-menu
-        margin-top: 35px
+        margin-top: 20px // 35px
     .social-links
-        margin-top: 30px
+        margin-top: 15px // 30px
+        margin-bottom: 10px //
 
     .info-menu
         margin: 15px 0
