Поиск на шапке - адаптивность.

--- a/app/header.sass
+++ b/app/header.sass
@@ -205,6 +205,14 @@ body.is-windows-phone
             line-height: 1.2
             opacity: 0.8
 
+    .search-container,
+    .info-menu-container
+        float: left
+    .search-container
+        width: 55%
+    .info-menu-container
+        width: 45%
+
     .contact-menu
         margin-top: 20px // 35px
     .social-links
