--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -9,6 +9,7 @@
         .logo
             margin-top: 25px
         h1
+            margin-top: 28px
             font-size: em(32px)
             /* */
 
@@ -74,14 +75,6 @@
                     font-size: em(16px)
                 ul
                     top: 53px
-        .search-form
-            margin: 8px 0 0
-            input
-                width: 50px
-                font-size: em(16px)
-            button
-                i, .fa
-                    font-size: 24px
 
 
     /* Content */
