Убран виджет в профиле. Стили списка пользователей.

--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -420,7 +420,7 @@ svg
 section
     display: inline-block
     width: 100%
-    padding: 25px
+    padding: 20px 25px 25px
     margin-bottom: 30px
     section
         padding: 0
