--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -195,7 +195,7 @@ body
                     display: table-cell
                     vertical-align: top
                 .user-avatar
-                    width: 70px
+                    width: 65px
                 .item-content
                     > *
                         float: left
@@ -222,7 +222,7 @@ body
                 .item-image
                     float: left
                     width: 105px
-                    margin: 5px 20px 0 0
+                    margin: 5px 15px 0 0
                 .item-content
                     display: inline-block
                     width: calc(100% - 125px)
@@ -235,7 +235,7 @@ body
                     display: table-cell
                     vertical-align: top
                 .user-avatar
-                    width: 70px
+                    width: 65px
                 .item-content
                     position: relative
                     padding: 10px 15px 15px
@@ -279,9 +279,9 @@ body
             min-width: 30px
             color: $dark-gray-color
         .user-avatar
-            width: 70px
-            min-width: 70px
-            padding-right: 20px
+            width: 65px
+            min-width: 65px
+            padding-right: 15px
         .user
             .login, .rank, .date, .text-1, .text-2
                 display: inline-block
@@ -330,9 +330,9 @@ body
             padding-top: 15px
         .user-avatar
             &.big
-                width: 120px
-                min-width: 120px
-                max-width: 120px
+                width: 115px
+                min-width: 115px
+                max-width: 115px
         &.online
             .user-avatar
                 position: relative
@@ -348,8 +348,8 @@ body
                     border-radius: 50%
                     background: $green-color
                     position: absolute
-                    right: 18px
-                    top: 7px
+                    right: 15px
+                    top: 0
                     border: 3px solid $light-color
                     box-sizing: content-box
         .statistic
@@ -1000,11 +1000,11 @@ footer
 .user-profile
     #user-content-section
         display: table-cell
+        width: 100%
         padding-left: 20px
     #user-menu-section
         display: table-cell
         vertical-align: top
-        width: 100px
         height: 100%
         background: #f5f5f5
         border-radius: 5px
@@ -1012,7 +1012,7 @@ footer
             text-align: center
             li
                 display: inline-block
-                width: 100%
+                width: 100px
                 border-top: 1px solid #fff
                 border-bottom: 1px solid #eee
                 &:first-child
@@ -1128,8 +1128,9 @@ footer
             .buttons
                 padding: 0 20px 10px 0
     #content
-        padding-top: 10px
         margin-bottom: 0
+    #user-section + #content
+        padding-top: 10px
         border-radius: 0 0 3px 3px
 
 .user-statistics
@@ -1235,4 +1236,10 @@ footer
             display: inline-block
         .small-description
             margin-bottom: 0
+
+/* Users messages */
+.dialogs-users.users-list
+    .item.user
+        padding: 10px 0
+
 @import "media"
